force-app/main/default/objects/CLM_CliListMember__c/CLM_CliListMember__c.object-meta.xml
<CustomObject>
    <description>Customers in your client list.</description>
    <label>Client List Member</label>
    <nameField>
        <displayFormat>CLM-{0}</displayFormat>
        <label>Client List Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client List Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>