force-app/main/default/objects/CLM_CliListMember__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client List Members</relationshipLabel>
    <relationshipName>Client_List_Members</relationshipName>
    <type>Lookup</type>
</CustomField>