force-app/main/default/objects/CLM_CliListMember__c/fields/ClientList__c.field-meta.xml
<CustomField>
    <fullName>ClientList__c</fullName>
    <description>Client list which is containing this customer.</description>
    <inlineHelpText>Select the client list to contain this customer.</inlineHelpText>
    <label>Client List</label>
    <referenceTo>CLI_CliList__c</referenceTo>
    <relationshipLabel>Client List Members</relationshipLabel>
    <relationshipName>Client_List_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>