force-app/main/default/objects/CLM_CliListMember__c/fields/DreamId__c.field-meta.xml
<CustomField>
    <fullName>DreamId__c</fullName>
    <formula>Client__r.Account.DREAMID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dream Id</label>
    <type>Text</type>
</CustomField>