force-app/main/default/objects/CLM_CliListMember__c/fields/MyLV_url__c.field-meta.xml
<CustomField>
    <fullName>MyLV_url__c</fullName>
    <label>MyLV url</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>