force-app/main/default/objects/CLM_CliListMember__c/fields/MyLV_url_short__c.field-meta.xml
<CustomField>
    <fullName>MyLV_url_short__c</fullName>
    <label>MyLV url short</label>
    <length>255</length>
    <type>Text</type>
</CustomField>