force-app/main/default/objects/CLM_CliListMember__c/fields/PrefContactChannel__c.field-meta.xml
<CustomField>
    <fullName>PrefContactChannel__c</fullName>
    <formula>TEXT( Client__r.PreferredContactChannel__c )</formula>
    <label>Preferred Channel</label>
    <type>Text</type>
</CustomField>