force-app/main/default/objects/CLM_CliListMember__c/fields/TECH_External_Id__c.field-meta.xml
<CustomField>
    <fullName>TECH_External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>TECH_External_Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>