force-app/main/default/objects/CLM_CliListMember__c/fields/TECH_UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>TECH_UniqueKey__c</fullName>
    <label>TECH UniqueKey</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>